--- a/src/styles/tokens.generated.css
+++ b/src/styles/tokens.generated.css
@@ -136,9 +136,9 @@
   --color-borderHeavy: #8B9BC5;
   --color-borderHover: #5DBAFF;
   --color-borderLight: #BFC9E3;
-  --color-linkActive: #1E4FBF;
-  --color-linkDefault: #2563EB;
-  --color-linkHover: #3BA0FF;
+  --color-linkActive: #1A3F8F;
+  --color-linkDefault: #1E4FBF;
+  --color-linkHover: #2563EB;
   --color-linkVisited: #1E4FBF;
   --color-textDefault: #282d46;
   --color-textHeadings: #282d46;
