--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,6 +46,14 @@
     background-color: var(--color-white);
     color: var(--mantine-color-text);
   }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 0;
+  }
 
   /** Legacy global styles from Nuxt app **/
 
