--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,8 +36,9 @@
     --mantine-font-size-md: 1rem;
     --mantine-line-height: 1.55;
     --mantine-color-text: var(--color-sky-900);
+    --mantine-color-headings: var(--color-sky-800);
     --mantine-h1-font-size: 3rem;
-    --mantine-h1-font-weight: 600;
+    --mantine-h1-font-weight: 650;
     --mantine-h2-font-size: 2.25rem;
     --mantine-h2-font-weight: 700;
     --mantine-h3-font-weight: 700;
@@ -46,6 +47,11 @@
     background-color: var(--color-white);
     color: var(--mantine-color-text);
   }
+  h1,
+  h2 {
+    color: var(--mantine-color-headings);
+  }
+
   h1,
   h2,
   h3,
