Make all pages client:load

--- a/src/pages/banks/[bankTag].astro
+++ b/src/pages/banks/[bankTag].astro
@@ -33,5 +33,5 @@ const title = `${bankName}'s Climate Score`
 ---
 
 <BaseLayout title={title}>
-  <BankScorePage bank={bank} />
+  <BankScorePage bank={bank} client:load />
 </BaseLayout>
