--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,5 +7,5 @@ const page = await getSingleSafe('contactpage')
 ---
 
 <BaseLayout title="Contact Us">
-  <ContactPage page={page} />
+  <ContactPage page={page} client:load />
 </BaseLayout>
