--- a/src/pages/embrace.astro
+++ b/src/pages/embrace.astro
@@ -7,5 +7,5 @@ const page = await getSingleSafe('embracepage')
 ---
 
 <BaseLayout title="Embrace">
-  <EmbracePage page={page} />
+  <EmbracePage page={page} client:load />
 </BaseLayout>
