--- a/src/pages/glossary.astro
+++ b/src/pages/glossary.astro
@@ -7,5 +7,5 @@ const page = await getSingleSafe('glossarypage')
 ---
 
 <BaseLayout title="Glossary">
-  <SlicePage title="Glossary" page={page} />
+  <SlicePage title="Glossary" page={page} client:load />
 </BaseLayout>
