--- a/src/pages/join.astro
+++ b/src/pages/join.astro
@@ -8,5 +8,5 @@ const page = await getByUIDSafe('textonlypages', 'joinpage')
 ---
 
 <BaseLayout title="Join the Money Movement">
-  <JoinPage page={page} />
+  <JoinPage page={page} client:load />
 </BaseLayout>
