--- a/src/pages/team/alumni.astro
+++ b/src/pages/team/alumni.astro
@@ -10,5 +10,5 @@ const page = await getSingleSafe('teampage', {
 ---
 
 <BaseLayout title="Team Alumni">
-  <TeamAlumniPage page={page} />
+  <TeamAlumniPage page={page} client:load />
 </BaseLayout>
