--- a/src/pages/thanks/[type].astro
+++ b/src/pages/thanks/[type].astro
@@ -28,5 +28,5 @@ if (mapping.type === 'thankspages') {
 ---
 
 <BaseLayout title="Thank You">
-  <ThanksPage page={page} fallback={fallback} pageType={pageType} />
+  <ThanksPage page={page} fallback={fallback} pageType={pageType} client:load />
 </BaseLayout>
