--- a/src/styles/tokens.generated.css
+++ b/src/styles/tokens.generated.css
@@ -65,6 +65,19 @@
   --color-sky-800: #282d46;
   --color-sky-900: #1C2032;
   --color-sky-1000: #000000;
+  --color-gray-0: #FFFFFF;
+  --color-gray-50: #f9fafa;
+  --color-gray-100: #e4e6e7;
+  --color-gray-200: #c9cdcf;
+  --color-gray-300: #aeb4b7;
+  --color-gray-400: #939b9f;
+  --color-gray-500: #6b7276;
+  --color-gray-600: #42484c;
+  --color-gray-700: #363b3e;
+  --color-gray-800: #292d30;
+  --color-gray-900: #1d2022;
+  --color-gray-950: #0f1011;
+  --color-gray-1000: #000000;
   --color-red-50: #FCEDE8;
   --color-red-100: #FADFD7;
   --color-red-200: #F8B9A6;
@@ -86,18 +99,6 @@
   --color-blue-700: #1E4FBF;
   --color-blue-800: #1A3F8F;
   --color-blue-900: #122E62;
-  --color-gray-0: #FFFFFF;
-  --color-gray-50: #F4F8FD;
-  --color-gray-100: #D9E0F2;
-  --color-gray-200: #BFC9E3;
-  --color-gray-300: #A5B2D4;
-  --color-gray-400: #8B9BC5;
-  --color-gray-500: #6D7FA0;
-  --color-gray-600: #434F6D;
-  --color-gray-700: #353E59;
-  --color-gray-800: #282d46;
-  --color-gray-900: #1C2032;
-  --color-gray-1000: #000000;
   --color-green-50: #F2F7EB;
   --color-green-100: #EDF5E5;
   --color-green-200: #CEE1B4;
@@ -122,20 +123,20 @@
   --color-primaryDark: #282d46;
   --color-primaryLight: #434F6D;
   --color-oceanBlue: #282d46;
-  --color-woodlandGreen: #1E4132;
+  --color-woodlandGreen: #123F30;
   --color-pistachioGreen: #EDF5E5;
   --color-arcticBlue: #DCEDFF;
   --color-black: #000000;
   --color-white: #FFFFFF;
-  --color-paper: #F4F8FD;
-  --color-bgContrast: #D9E0F2;
+  --color-paper: #f9fafa;
+  --color-bgContrast: #e4e6e7;
   --color-bgDefault: #FFFFFF;
-  --color-bgInverse: #282d46;
-  --color-borderDefault: #A5B2D4;
+  --color-bgInverse: #292d30;
+  --color-borderDefault: #aeb4b7;
   --color-borderFocus: #2563EB;
-  --color-borderHeavy: #8B9BC5;
+  --color-borderHeavy: #939b9f;
   --color-borderHover: #5DBAFF;
-  --color-borderLight: #BFC9E3;
+  --color-borderLight: #c9cdcf;
   --color-linkActive: #2563EB;
   --color-linkDefault: #1A3F8F;
   --color-linkHover: #1E4FBF;
