--- a/src/pages/certification.astro
+++ b/src/pages/certification.astro
@@ -9,5 +9,5 @@ const page = await getSingleSafe('certificationpage', {
 ---
 
 <BaseLayout title="Fossil Free Certification">
-  <CertificationPage page={page} />
+  <CertificationPage page={page} client:load />
 </BaseLayout>
