--- a/src/pages/impact.astro
+++ b/src/pages/impact.astro
@@ -8,5 +8,5 @@ const page = await getByUIDSafe('textonlypages', 'impactpage')
 ---
 
 <BaseLayout title="Switch Survey">
-  <ImpactPage page={page} />
+  <ImpactPage page={page} client:load />
 </BaseLayout>
