--- a/src/pages/one-pager-simple.astro
+++ b/src/pages/one-pager-simple.astro
@@ -7,5 +7,5 @@ const page = await getSingleSafe('onepagersimplepage')
 ---
 
 <BaseLayout title="One Pager">
-  <SlicePage title="One Pager" page={page} />
+  <SlicePage title="One Pager" page={page} client:load />
 </BaseLayout>
