--- a/src/pages/sustainable-eco-banks/[bankTag].astro
+++ b/src/pages/sustainable-eco-banks/[bankTag].astro
@@ -24,5 +24,5 @@ const title = `${bankName} Review`
 ---
 
 <BaseLayout title={title}>
-  <BankProfilePage bank={bank} />
+  <BankProfilePage bank={bank} client:load />
 </BaseLayout>
