--- a/src/styles/tokens.generated.css
+++ b/src/styles/tokens.generated.css
@@ -141,6 +141,7 @@
   --color-linkDefault: #1A3F8F;
   --color-linkHover: #1E4FBF;
   --color-linkVisited: #1A3F8F;
+  --color-linkInverse: #5DBAFF;
   --color-textDefault: #292d30;
   --color-textHeadings: #282d46;
   --color-textInverse: #FFFFFF;
