--- a/src/styles/overrides.css
+++ b/src/styles/overrides.css
@@ -12,13 +12,14 @@
   --font-weight-normal: 400;
   --font-weight-medium: 500;
   --font-weight-semibold: 600;
+  --font-weight-bold: 700;
 }
 
 /* Select all Mantine components */
 *[class^="mantine"] {
   b,
   strong {
-    font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-bold);
   }
 }
 
