--- a/src/styles/tokens.generated.css
+++ b/src/styles/tokens.generated.css
@@ -139,7 +139,7 @@
   --color-borderLight: #c9cdcf;
   --color-linkActive: #2563EB;
   --color-linkDefault: #1A3F8F;
-  --color-linkHover: #1E4FBF;
+  --color-linkHover: #2563EB;
   --color-linkVisited: #1A3F8F;
   --color-linkInverse: #5DBAFF;
   --color-textDefault: #292d30;
