--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,8 +39,9 @@
     --mantine-color-headings: var(--color-textHeadings);
     --mantine-h1-font-size: 2.5rem;
     --mantine-h1-font-weight: 650;
-    --mantine-h2-font-size: 2.25rem;
+    --mantine-h2-font-size: 2.15rem;
     --mantine-h2-font-weight: 700;
+    --mantine-h3-font-size: 1.75rem;
     --mantine-h3-font-weight: 700;
     --mantine-h4-font-weight: 600;
     --mantine-h5-font-weight: 600;
@@ -48,7 +49,8 @@
     color: var(--mantine-color-text);
   }
   h1,
-  h2 {
+  h2,
+  h3 {
     color: var(--mantine-color-headings);
   }
 
@@ -71,6 +73,10 @@
   h6 {
     margin-top: 0;
     margin-block-start: 0;
+  }
+
+  li {
+    margin-left: 1em;
   }
 
   /** Legacy global styles from Nuxt app **/
