--- a/src/styles/tokens.generated.css
+++ b/src/styles/tokens.generated.css
@@ -24,8 +24,8 @@
   --color-sushi-300: #B7D290;
   --color-sushi-400: #9FC46B;
   --color-sushi-500: #7BB123;
-  --color-sushi-600: #6C9039;
-  --color-sushi-700: #506B2B;
+  --color-sushi-600: #5e892a;
+  --color-sushi-700: #4f6f25;
   --color-sushi-800: #35471C;
   --color-sushi-900: #1A220E;
   --color-sushi-DEFAULT: #7BB123;
@@ -105,8 +105,8 @@
   --color-green-300: #B7D290;
   --color-green-400: #9FC46B;
   --color-green-500: #7BB123;
-  --color-green-600: #6C9039;
-  --color-green-700: #506B2B;
+  --color-green-600: #5e892a;
+  --color-green-700: #4f6f25;
   --color-green-800: #35471C;
   --color-green-900: #1A220E;
   --color-green-DEFAULT: #7BB123;
@@ -133,15 +133,15 @@
   --color-bgDefault: #FFFFFF;
   --color-bgInverse: #292d30;
   --color-borderDefault: #aeb4b7;
-  --color-borderFocus: #2563EB;
+  --color-borderFocus: #5e892a;
   --color-borderHeavy: #939b9f;
-  --color-borderHover: #5DBAFF;
+  --color-borderHover: #7BB123;
   --color-borderLight: #c9cdcf;
-  --color-linkActive: #2563EB;
-  --color-linkDefault: #1A3F8F;
-  --color-linkHover: #2563EB;
-  --color-linkVisited: #1A3F8F;
-  --color-linkInverse: #5DBAFF;
+  --color-linkActive: #7BB123;
+  --color-linkDefault: #4f6f25;
+  --color-linkHover: #5e892a;
+  --color-linkVisited: #35471C;
+  --color-linkInverse: #B7D290;
   --color-textDefault: #292d30;
   --color-textHeadings: #282d46;
   --color-textInverse: #FFFFFF;
