--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,10 +28,11 @@
     font-family: var(--font-family);
     font-size: var(--mantine-font-size-md);
     line-height: var(--mantine-line-height);
-    background-color: var(--color-sushi-100);
+    background-color: var(--mantine-color-bg);
   }
   body {
     --mantine-color-default-color: var(--color-linkDefault);
+    --mantine-color-bg: var(--color-sushi-100);
     --mantine-color-body: var(--color-white);
     --mantine-font-family: var(--font-family);
     --mantine-font-size-md: 1rem;
@@ -40,15 +41,20 @@
     --mantine-color-headings: var(--color-textHeadings);
     --mantine-h1-font-size: 2.5rem;
     --mantine-h1-font-weight: 650;
+    --mantine-h1-line-height: 1.2;
     --mantine-h2-font-size: 2.15rem;
     --mantine-h2-font-weight: 700;
+    --mantine-h2-line-height: 1.2;
     --mantine-h3-font-size: 1.75rem;
     --mantine-h3-font-weight: 700;
+    --mantine-h3-line-height: 1.2;
     --mantine-h4-font-size: 1.35rem;
     --mantine-h4-font-weight: 650;
+    --mantine-h4-line-height: 1.2;
     --mantine-h5-font-size: 1.15rem;
     --mantine-h5-font-weight: 600;
-    background-color: var(--color-white);
+    --mantine-h5-line-height: 1.2;
+    background-color: var(--mantine-color-body);
     color: var(--mantine-color-text);
   }
   h1,
@@ -134,7 +140,7 @@
   }
 
   .contain {
-    @apply w-full max-w-6xl mx-auto px-6 lg:px-0;
+    @apply w-full max-w-6xl mx-auto px-8 lg:px-0;
   }
 
   .overflow-y-scroll {
